--- a/frontend/src/index.html
+++ b/frontend/src/index.html
@@ -21,9 +21,9 @@
     </head>
     <body>
         <div id="vueAnchor">
-            <img src="/resources/loader.svg" class="initial-page-loader">
+            <img src="/assets/resources/loader.svg" class="initial-page-loader">
         </div>
 
-        <script src="/index.js"></script>
+        <script src="/assets/index.js"></script>
     </body>
 </html>
