--- a/packages/frontend/src/resources/public/index.html
+++ b/packages/frontend/src/resources/public/index.html
@@ -10,6 +10,15 @@
 
         <title>AlexNotes</title>
 
+        <link rel="shortcut icon" type="image/x-icon" href="/favicon.ico"/>
+        <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+        <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+        <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+        <link rel="manifest" href="/site.webmanifest">
+        <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#1565c0">
+        <meta name="msapplication-TileColor" content="#2b5797">
+        <meta name="theme-color" content="#ffffff">
+
         <style>
             .initial-page-loader {
                 left: 50%;
